    Closes: #705141
  * dh_installdeb: Drop pre-dependency on dpkg for dpkg-maintscript-helper.
    Closes: #703264
  * makefile buildsystem: Pass any parameters specified after -- when
    running make -n to test for the existance of targets.
    In some makefiles, the parameters may be necessary to enable a target.
    Closes: #706923

 -- Joey Hess <joeyh@debian.org>  Sun, 05 May 2013 11:34:20 -0400

debhelper (9.20130504) unstable; urgency=low

  * dh_shlibdeps: Warn if -V flag is passed, to avoid it accidentially being
    used here rather than in dh_makeshlibs. Closes: #680339
  * dh_lintian: Source overrides doc improvement. Closes: #683941
  * dh_installmime: No longer makes maintainer scripts run update-mime and
    update-mime-database, that is now handled by triggers. Closes: #684689
    Thanks, Charles Plessy
  * python distutils buildsystem: Propagate failure of pyversions.
    Closes: #683551 Thanks, Clint Byrum
  * python distutils buildsystem: When checking if a version of python is
    installed, don't trust the presense of the executable, as
    a python2.X-minimal package may provide it while not having
    distutils installed. Closes: #683557, #690378
  * dh_icons: Improve documentation. Closes: #684895
  * Improve -X documentation. Closes: #686696
  * Support installing multiple doc-base files which use the same doc-id.
    Closes: #525821
  * dh_installdocs: Support having the same document id in different binary
    packages built from the same source.
    Closes: #525821 Thanks, Don Armstrong
  * dh_installdeb: Avoid unnecessary is_udeb tests. Closes: #691398
  * Updated German man page translation. Closes: #691557, #706314
  * dh_installinit: Support systemd.
    Closes: #690399 Thanks, Michael Stapelberg
  * Updated French man page translation. Closes: #692208
  * dh_icons: Reword description. Closes: #693100
  * Avoid find -perm +mode breakage caused by findutils 4.5.11,
    by instead using -perm /mode. Closes: #700200