@@ -13,6 +13,8 @@ debhelper (9.20130505) UNRELEASED; urgency=low
     running make -n to test for the existance of targets.
     In some makefiles, the parameters may be necessary to enable a target.
     Closes: #706923
+  * Revert python2.X-minimal fix, because it was buggy.
+    Closes: #707111 (Reopens #683557)
 
  -- Joey Hess <joeyh@debian.org>  Sun, 05 May 2013 11:34:20 -0400
 
